# cpp-rope

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMake/: FindICU.cmake
src/: fibonacci.cc  fibonacci.hpp  main.cc  measure.hpp  rope.hpp  rope_global_conf.hpp  rope_iter.hpp  rope_node.hpp  rope_node_type.hpp  slice.hpp  utf8.cc  utf8.hpp
